@@ -3,6 +3,8 @@ package it.cubicworldsimulator.game.openglcommands;
 import it.cubicworldsimulator.engine.graphic.Mesh;
 import it.cubicworldsimulator.game.world.chunk.ChunkMesh;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 public class OpenGLUnloadChunkCommand implements OpenGLCommand {
@@ -19,6 +21,6 @@ public class OpenGLUnloadChunkCommand implements OpenGLCommand {
     }
 
     public Mesh[] getMeshes() {
-        return List.of(mesh.getOpaqueMesh(), mesh.getTransparentMesh()).toArray(Mesh[]::new);
+        return List.of(mesh.getOpaqueMesh() == null ? Collections.emptyList() : mesh.getOpaqueMesh(), mesh.getTransparentMesh() == null ? Collections.emptyList() : mesh.getTransparentMesh()).toArray(Mesh[]::new);
     }
 }
